Inserindo mais informação

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 						<ul>
 							<li>Desenvolvedor Indie. ahhn?(o cara que faz tudo)</li>
 							<li>O mercado mobile</li>
-							<li>Ferramentas, frameworks</li>
+							<li>Ferramentas e frameworks</li>
 							<li>Monetização</li>
 							<li>O que faz um game de sucesso?(caminho das pedras)</li>
 							<li>Resumo</li>
@@ -68,7 +68,7 @@
 
 				<section>
 					<h3>Desenvolvedor Indie</h3>
-					<p>Desnvolvedor independente</p>
+					<p>Falar do Desnvolvedor independente, dos desafios, das dificuldades, do mercado aqui no ceará</p>
 				</section>
 
 				<section>
@@ -99,8 +99,35 @@
 					</section>
 
 				</section>
+
+				<section>
+					<h3>Ferramentas e frameworks</h3>
+					<p class="green">Na web nós temos uma gama de frameworks para que nós possamos elaborar nossos próprios jogos.</p>
+					<ul>
+						<li>Libgdx - java</li>
+						<li>Corona SDK - lua</li>
+						<li>Unity - c#, js, boo</li>
+						<li>Cocos 2D-x - c++, js, lua</li>
+					</ul>
+				</section>
+
+				<section>
+					<h3>Pra quem não sabe</h3>
+					<p>Boo é linguagem de código aberto que foi criada por um brasileiro chamado Rodrigo Barreto de Oliveira.</p>
+				</section>
 					
-				
+				<section>
+					<h2>Monetização</h2>
+					<p>Será que é verdade mesmo?</p>
+				</section>
+
+				<section>
+					<p>Hoje em dia está cada vez mais fácil lançar seu jogo por mais simples que seja, e você começar a ganhar uma renda extra em cima dele.</p>
+				</section>
+
+				<section>
+					<h3>Alguns gráficos</h3>
+				</section>
 
 			</div>
 
