Inserindo textos sobre desafios no treinamento.

--- a/index.html
+++ b/index.html
@@ -67,8 +67,103 @@
 				</section>
 
 				<section>
-					<h3>Desenvolvedor Indie</h3>
-					<p>Falar do Desnvolvedor independente, dos desafios, das dificuldades, do mercado aqui no ceará</p>
+					<section>
+						<h3>Desenvolvedor Indie</h3>
+						<p>Indie é a abreviação de "independente", é uma pessoa ou um grupo de pessoas sem apoio financeiro de publicadoras de games que focam em inovação.</p>						
+					</section>
+
+					<section>
+						<h3>Podemos citar alguns exemplos</h3>
+						<ul>
+							<li><a href="http://pt.wikipedia.org/wiki/Braid" target="_blank">Braid</a></li>
+							<li><a href="http://pt.wikipedia.org/wiki/World_of_Goo" target="_blank">World of Goo</a></li>
+							<li><a href="http://pt.wikipedia.org/wiki/Minecraft" target="_blank">Minecraft</a></li>
+							<li><a href="http://www.google.com.br/ads/admob/success.html" target="_blank">Hill Climb Racing</a></li>
+							<li><a href="http://pt.wikipedia.org/wiki/Super_Meat_Boy" target="_blank">Super Meat Boy</a></li>
+						</ul>
+					</section>
+
+					<section>
+						<p>Todos esses games indie citados acima, foram criados por no máximo 2 pessoas.</p>
+					</section>
+
+					<section>
+						<h3>O que esperamos atualmente?</h3>
+						<p>Antes a gente pensava em ganhar bem na nossa área, porém, hoje em dia já pensamos diferente.</p>
+					</section>
+
+					<section>
+						<img src="img/milhao.png" alt="Pensando em um milhão">
+					</section>
+
+					<section>
+						<h3>Antes de falar dos desafios</h3>
+					</section>
+
+					<section>
+						<h3>Monetização</h3>
+						<p>Será que é verdade mesmo?</p>
+					</section>
+
+					<section>
+						<h3>Exemplos</h3>
+					</section>
+
+					<section>
+						<img src="img/report-01.png" alt="Relatorio 01">
+					</section>
+
+					<section>
+						<img src="img/report-02.png" alt="Relatorio 02">
+					</section>
+
+					<section>
+						<h3>Primeiro desafio</h3>
+						<p>Não desista no seu primeiro game.</p>
+					</section>
+
+					<section>
+						<p>Muitas vezes criamos um game achando que será inovador, divertido, difícil, com um design perfeito e que vai render aí muitos downloads e consequentemente um bom ganho diário. Porém, o retorno acaba não sendo como esperado.</p>
+					</section>
+
+					<section>
+						<h3>Exemplo</h3>
+					</section>
+
+					<section>
+						<h3>Pixel Saga</h3>
+						<p>escrever mais coisas e colocar imagens dos graficos</p>
+					</section>
+
+					<section>
+						<h3>Pix Runner</h3>
+						<p>escrever mais coisas e colocar imagens dos graficos</p>
+					</section>
+
+				</section>
+
+				<section>
+					<section>
+						<h3>Segundo desafio</h3>
+						<p>Não faça um game grandioso, tente começar simples.</p>
+					</section>
+
+					<section>
+						<h3>Exemplo</h3>
+						<p>FEZ - um jogo indie que começou grande...</p>
+					</section>
+
+					<section>
+						<h3>E se for grandioso</h3>
+						<p>Vá até o fim!!!!!</p>
+					</section>
+				</section>
+
+				<section>
+					<section>
+						<h3>Terceiro desafio - Habilidades artísticas</h3>
+						<p>imganes ou textos falando da produção musical, produção no design, a história</p>
+					</section>
 				</section>
 
 				<section>
