Inserindo mais informações

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@
 					<section>						
 						<h2>Prólogo</h2>
 						<ul>
+							<li>Objetivo</li>
 							<li>Desenvolvedor Indie. ahhn?(o cara que faz tudo)</li>
 							<li>O mercado mobile</li>
 							<li>Ferramentas e frameworks</li>
@@ -67,9 +68,14 @@
 				</section>
 
 				<section>
+					<h3>Objetivo</h3>
+					<p>Incentivar o desenvolvimento de jogos em nosso estado, o espírito de empreendedorismo, inovação e com isso dar mais visibilidade para o Nordeste.</p>
+				</section>
+
+				<section>
 					<section>
 						<h3>Desenvolvedor Indie</h3>
-						<p>Indie é a abreviação de "independente", é uma pessoa ou um grupo de pessoas sem apoio financeiro de publicadoras de games que focam em inovação.</p>						
+						<p>Indie é a abreviação de "independente", é uma pessoa ou um grupo de pessoas sem apoio financeiro de publicadoras de games que focam em inovação.</p>
 					</section>
 
 					<section>
@@ -94,6 +100,10 @@
 
 					<section>
 						<img src="img/milhao.png" alt="Pensando em um milhão">
+					</section>
+
+					<section>
+						<p>É inegável que o interesse por jogos eletrônicos vem aumentando no Brasil. A indústria do gênero é tão grande no País que, em 2012, foi maior que a do Reino Unido, Espanha e Alemanha. </p>
 					</section>
 
 					<section>
@@ -170,7 +180,7 @@
 					
 					<section>						
 						<h3>O mercado mobile</h3>
-						<p>A categoria mobile é o segmento de jogos digitais que mais cresce.</p>
+						<p>Voltando... A categoria mobile é o segmento de jogos digitais que mais cresce.</p>
 						<img src="img/growing-game-report.png" alt="">
 					</section>
 
