Finalizando estrutura padrão da apresentação.

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 						<h2>Prólogo</h2>
 						<ul>
 							<li>Objetivo</li>
-							<li>Desenvolvedor Indie. ahhn?(o cara que faz tudo)</li>
+							<li>Desenvolvedor Indie.(o cara que faz tudo)</li>
 							<li>O mercado mobile</li>
 							<li>Ferramentas e frameworks</li>
 							<li>Monetização</li>
@@ -75,7 +75,7 @@
 				<section>
 					<section>
 						<h3>Desenvolvedor Indie</h3>
-						<p>Indie é a abreviação de "independente", é uma pessoa ou um grupo de pessoas sem apoio financeiro de publicadoras de games que focam em inovação.</p>
+						<p>Indie é a abreviação de "independente", é uma pessoa ou um grupo de pessoas sem apoio financeiro que focam em inovação.</p>
 					</section>
 
 					<section>
@@ -95,7 +95,7 @@
 
 					<section>
 						<h3>O que esperamos atualmente?</h3>
-						<p>Antes a gente pensava em ganhar bem na nossa área, porém, hoje em dia já pensamos diferente.</p>
+						<p>Antes a gente pensava em ganhar uma boa "grana" em nossa área, porém, hoje em dia já pensamos diferente.</p>
 					</section>
 
 					<section>
@@ -128,7 +128,7 @@
 					</section>
 
 					<section>
-						<h3>Primeiro desafio</h3>
+						<h3>1° desafio</h3>
 						<p>Não desista no seu primeiro game.</p>
 					</section>
 
@@ -141,38 +141,55 @@
 					</section>
 
 					<section>
+						<h3>Panda Run</h3>
+						<img src="img/panda-run.png" alt="Panda Run Game">
+					</section>
+
+					<section>
 						<h3>Pixel Saga</h3>
-						<p>escrever mais coisas e colocar imagens dos graficos</p>
+						<img src="img/pixel-saga.png" alt="">
 					</section>
 
 					<section>
 						<h3>Pix Runner</h3>
-						<p>escrever mais coisas e colocar imagens dos graficos</p>
+						<img src="img/pix-runner.png" alt="">
 					</section>
 
 				</section>
 
 				<section>
 					<section>
-						<h3>Segundo desafio</h3>
+						<h3>2° desafio</h3>
 						<p>Não faça um game grandioso, tente começar simples.</p>
 					</section>
 
 					<section>
 						<h3>Exemplo</h3>
 						<p>FEZ - um jogo indie que começou grande...</p>
+						<img src="img/fez.png" alt="Game FEZ que levou 3 anos para ser produzido">
 					</section>
 
 					<section>
-						<h3>E se for grandioso</h3>
+						<h3>...se for grandioso</h3>
 						<p>Vá até o fim!!!!!</p>
 					</section>
 				</section>
 
 				<section>
 					<section>
-						<h3>Terceiro desafio - Habilidades artísticas</h3>
+						<h3>3° desafio - Habilidades artísticas</h3>
 						<p>imganes ou textos falando da produção musical, produção no design, a história</p>
+					</section>
+
+					<section>
+						<h3>Não sabe desenhar?</h3>
+						<p>Compre spritesheets, não investe tanto e ainda ganha tempo</p>
+						<img src="img/spritesheet.png" alt="spritesheet">
+					</section>
+
+					<section>
+						<h3>Não sabe produzir música?</h3>
+						<p>Compre/Baixe loops e sons, valor de investimento é pequeno ou até mesmo gratuito e você tem sons de qualidade em seu game.</p>
 					</section>
 				</section>
 
@@ -207,31 +224,86 @@
 
 				<section>
 					<h3>Ferramentas e frameworks</h3>
-					<p class="green">Na web nós temos uma gama de frameworks para que nós possamos elaborar nossos próprios jogos.</p>
+					<p class="green">Na web nós temos uma gama de frameworks para podermos elaborar nossos próprios jogos.</p>
 					<ul>
 						<li>Libgdx - java</li>
 						<li>Corona SDK - lua</li>
 						<li>Unity - c#, js, boo</li>
-						<li>Cocos 2D-x - c++, js, lua</li>
+						<li>Cocos 2D-X - c++, js, lua</li>
 					</ul>
 				</section>
 
 				<section>
 					<h3>Pra quem não sabe</h3>
-					<p>Boo é linguagem de código aberto que foi criada por um brasileiro chamado Rodrigo Barreto de Oliveira.</p>
+					<p><span class="green">Boo</span> é linguagem de código aberto que foi criada por um brasileiro chamado Rodrigo Barreto de Oliveira.</p>
+					<p><span class="green">Lua</span> também foi criado no Brasil pela PUC-RJ</p>
+				</section>
+
+				<section>
+					<h3>Mostrando um pouco de código!</h3>
 				</section>
 					
 				<section>
-					<h2>Monetização</h2>
-					<p>Será que é verdade mesmo?</p>
+					<section>
+						<h3>Daqui adiante, dicas de um game de sucesso</h3>
+						<p>créditos:</p>
+						<a href="http://treinamentosdvd.com.br/blog/10-dicas-de-como-fazer-um-jogo-de-sucesso-para-mobile/" target="_blank">10 dicas de um game de sucesso</a><br>
+						<a href="http://www.slideshare.net/rafarsbr" target="_blank">Slideshare</a>
+					</section>
+					
+					<section>
+						<h3>4° Desafio</h3>
+						<p>Vai criar a história do game? Então não invente demais, sempre pensar no simples.</p>
+					</section>
+
+					<section>
+						<h3>5° Desafio</h3>
+						<p>Simples de jogar</p>
+					</section>
+
+					<section>
+						<h3>6° Desafio</h3>
+						<p>Livres de derrotas</p>
+					</section>
+
+					<section>
+						<h3>7° Desafio</h3>
+						<p>Feedbacks constantes</p>
+					</section>
+
+					<section>
+						<h3>8° Desafio</h3>
+						<p>Muitas e muitas fases</p>
+					</section>
+
+					<section>
+						<h3>9° Desafio</h3>
+						<p>Lembre do hardcore</p>
+					</section>
+
+					<section>
+						<h3>10° Desafio</h3>
+						<p>Muitos achievements</p>
+					</section>
+
+					<section>
+						<h3>11° Desafio</h3>
+						<p>Física Lúdica</p>
+					</section>
+
+					<section>
+						<h3>12° Desafio</h3>
+						<p>Be cute</p>
+					</section>
+
+					<section>
+						<h3>13° Desafio</h3>
+						<h1>Seja paciente</h1>
+					</section>
 				</section>
 
 				<section>
-					<p>Hoje em dia está cada vez mais fácil lançar seu jogo por mais simples que seja, e você começar a ganhar uma renda extra em cima dele.</p>
-				</section>
-
-				<section>
-					<h3>Alguns gráficos</h3>
+					<h1>Muito obrigado.</h1>
 				</section>
 
 			</div>
