--- a/index.html
+++ b/index.html
@@ -68,18 +68,33 @@
 				</section>
 
 				<section>
-					<h3>Objetivo</h3>
-					<p>Incentivar o desenvolvimento de jogos em nosso estado, o espírito de empreendedorismo, inovação e com isso dar mais visibilidade para o Nordeste.</p>
+					<section>
+						<h3>Objetivo</h3>
+						<p>Incentivar o desenvolvimento de jogos em nosso estado, o espírito de empreendedorismo, inovação e com isso dar mais visibilidade para o Nordeste e o Brasil.</p>						
+					</section>
+
+					<section>
+						<h3>Dados mostram um ótimo momento</h3>
+						<ul>
+							<li>74% das empresas de games faturam até R$ 240 mil por ano, no Brasil.</li>
+							<li>35% das empresas estão localizadas em São Paulo.</li>
+							<li>O Rio Grande do Sul é o segundo Estado, com 10% das companhias.</li>
+							<li>81% dos jogos produzidos são mobile, ou seja, para celular.</li>
+							<li>O Brasil é um país de empresas jovens: mais de 50% delas foram fundadas há, no máximo, três anos.</li>
+							<li>Os jogos rendem duas vezes mais em relação à indústria fonográfica. E eles devem passar o setor de audiovisual até 2016.</li>
+						</ul>
+					</section>
 				</section>
 
 				<section>
 					<section>
 						<h3>Desenvolvedor Indie</h3>
-						<p>Indie é a abreviação de "independente", é uma pessoa ou um grupo de pessoas sem apoio financeiro que focam em inovação.</p>
+						<p>Indie é a abreviação de "independente", é uma pessoa ou um grupo de pessoas sem apoio financeiro que focam em inovação. E aqui no Brasil isso se torna mais forte ainda porque não temos linhas de créditos específicas e nem um apoio maior.</p>
 					</section>
 
 					<section>
 						<h3>Podemos citar alguns exemplos</h3>
+						<img src="img/games-success.png" alt="games success">
 						<ul>
 							<li><a href="http://pt.wikipedia.org/wiki/Braid" target="_blank">Braid</a></li>
 							<li><a href="http://pt.wikipedia.org/wiki/World_of_Goo" target="_blank">World of Goo</a></li>
@@ -95,7 +110,7 @@
 
 					<section>
 						<h3>O que esperamos atualmente?</h3>
-						<p>Antes a gente pensava em ganhar uma boa "grana" em nossa área, porém, hoje em dia já pensamos diferente.</p>
+						<p>Antes a gente pensava em ganhar uma boa "grana" em nossa área, porém, hoje em dia já podemos pensar mais além.</p>
 					</section>
 
 					<section>
@@ -103,7 +118,7 @@
 					</section>
 
 					<section>
-						<p>É inegável que o interesse por jogos eletrônicos vem aumentando no Brasil. A indústria do gênero é tão grande no País que, em 2012, foi maior que a do Reino Unido, Espanha e Alemanha. </p>
+						<p>É inegável que o interesse por jogos eletrônicos vem aumentando no Brasil. A indústria do gênero é tão grande no País que, em 2012, foi maior que a do Reino Unido, Espanha e Alemanha.</p>
 					</section>
 
 					<section>
@@ -125,6 +140,10 @@
 
 					<section>
 						<img src="img/report-02.png" alt="Relatorio 02">
+					</section>
+
+					<section>
+						<img src="img/report-google.png" alt="">
 					</section>
 
 					<section>
@@ -155,6 +174,10 @@
 						<img src="img/pix-runner.png" alt="">
 					</section>
 
+					<section>
+						<p>Até mesmo a Rovio teve que produzir 50 jogos para fazer sucesso.</p>
+					</section>
+
 				</section>
 
 				<section>
@@ -178,12 +201,12 @@
 				<section>
 					<section>
 						<h3>3° desafio - Habilidades artísticas</h3>
-						<p>imganes ou textos falando da produção musical, produção no design, a história</p>
+						<p>Esse é o ponto mais complicado para quem não conhece. É o que faz com que as pessoas desistam antes mesmo de começar.</p>
 					</section>
 
 					<section>
 						<h3>Não sabe desenhar?</h3>
-						<p>Compre spritesheets, não investe tanto e ainda ganha tempo</p>
+						<p>Compre spritesheets, não investe tanto e ainda lhe dá mais tempo pra lógica do game</p>
 						<img src="img/spritesheet.png" alt="spritesheet">
 					</section>
 
@@ -197,7 +220,7 @@
 					
 					<section>						
 						<h3>O mercado mobile</h3>
-						<p>Voltando... A categoria mobile é o segmento de jogos digitais que mais cresce.</p>
+						<p>Voltando um pouco... A categoria mobile é o segmento de jogos digitais que mais cresce.</p>
 						<img src="img/growing-game-report.png" alt="">
 					</section>
 
@@ -206,7 +229,7 @@
 					</section>
 
 					<section>
-						<h2>Aumento de dispositivos móveis</h2>
+						<h2>Aumento de dispositivos móveis aliado ao custo baixo</h2>
 						<img src="img/devices-mobile.png" alt="">
 					</section>
 
@@ -249,56 +272,67 @@
 						<p>créditos:</p>
 						<a href="http://treinamentosdvd.com.br/blog/10-dicas-de-como-fazer-um-jogo-de-sucesso-para-mobile/" target="_blank">10 dicas de um game de sucesso</a><br>
 						<a href="http://www.slideshare.net/rafarsbr" target="_blank">Slideshare</a>
+						<p><span class="green">Créditos: </span>Rafael Rodrigues</p>
 					</section>
 					
 					<section>
 						<h3>4° Desafio</h3>
-						<p>Vai criar a história do game? Então não invente demais, sempre pensar no simples.</p>
+						<p>Vai criar a história do game? Então não invente demais, sempre pense no simples.</p>
+						<img src="img/story-simple.png" alt="">
 					</section>
 
 					<section>
 						<h3>5° Desafio</h3>
 						<p>Simples de jogar</p>
+						<img src="img/subway-surfer.jpg" alt="subway surfer">
 					</section>
 
 					<section>
 						<h3>6° Desafio</h3>
 						<p>Livres de derrotas</p>
+						<img src="img/fruit-ninja.png" alt="fruit ninja">
 					</section>
 
 					<section>
 						<h3>7° Desafio</h3>
 						<p>Feedbacks constantes</p>
+						<img src="img/pou.png" alt="Pou">
 					</section>
 
 					<section>
 						<h3>8° Desafio</h3>
 						<p>Muitas e muitas fases</p>
+						<img src="img/candy-crush.png" alt="">
 					</section>
 
 					<section>
 						<h3>9° Desafio</h3>
 						<p>Lembre do hardcore</p>
+						<img src="img/flappy-bird.png" alt="flappy bird">
 					</section>
 
 					<section>
 						<h3>10° Desafio</h3>
 						<p>Muitos achievements</p>
+						<img src="img/achievements.png" alt="">
 					</section>
 
 					<section>
 						<h3>11° Desafio</h3>
 						<p>Física Lúdica</p>
+						<img src="img/game-fisica.png" alt="">
 					</section>
 
 					<section>
 						<h3>12° Desafio</h3>
 						<p>Be cute</p>
+						<img src="img/be-cute.png" alt="">
 					</section>
 
 					<section>
 						<h3>13° Desafio</h3>
 						<h1>Seja paciente</h1>
+						<img src="img/tranquilo.png" width="560" alt="Seja paciente">
 					</section>
 				</section>
 
